@@ -2,6 +2,7 @@
 package com.intellij.ui.mac;
 
 import com.intellij.diagnostic.LoadingState;
+import com.intellij.ide.CommandLineCustomHandler;
 import com.intellij.ide.CommandLineProcessor;
 import com.intellij.ide.CommandLineProcessorResult;
 import com.intellij.ide.DataManager;
@@ -20,7 +21,6 @@ import com.intellij.openapi.keymap.impl.IdeKeyEventDispatcher;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.project.ProjectManager;
 import com.intellij.openapi.util.BuildNumber;
-import com.intellij.openapi.util.SystemInfoRt;
 import com.intellij.openapi.util.io.FileUtilRt;
 import com.intellij.openapi.wm.IdeFocusManager;
 import com.intellij.ui.mac.foundation.Foundation;
@@ -29,6 +29,7 @@ import com.intellij.util.SmartList;
 import com.intellij.util.containers.ContainerUtil;
 import com.sun.jna.Callback;
 import io.netty.handler.codec.http.QueryStringDecoder;
+import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.Nullable;
 
 import javax.swing.*;
@@ -45,19 +46,18 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.concurrent.atomic.AtomicBoolean;
 
+@ApiStatus.Internal
 public final class MacOSApplicationProvider {
   private static final Logger LOG = Logger.getInstance(MacOSApplicationProvider.class);
 
   private MacOSApplicationProvider() { }
 
   public static void initApplication() {
-    if (SystemInfoRt.isMac) {
-      try {
-        Worker.initMacApplication();
-      }
-      catch (Throwable t) {
-        LOG.warn(t);
-      }
+    try {
+      Worker.initMacApplication();
+    }
+    catch (Throwable t) {
+      LOG.warn(t);
     }
   }
 
@@ -93,9 +93,7 @@ public final class MacOSApplicationProvider {
 
       desktop.setOpenFileHandler(event -> {
         List<File> files = event.getFiles();
-        if (files.isEmpty()) {
-          return;
-        }
+        if (files.isEmpty()) return;
 
         List<Path> list = ContainerUtil.map(files, file -> file.toPath());
         if (LoadingState.COMPONENTS_LOADED.isOccurred()) {
@@ -205,14 +203,25 @@ public final class MacOSApplicationProvider {
         @Override
         public void openURI(OpenURIEvent event) {
           Map<String, List<String>> parameters = new QueryStringDecoder(event.getURI()).parameters();
+
+          String uri = event.getURI().toString();
+          LOG.debug("Open URI: " + uri);
+
           String file = ContainerUtil.getFirstItem(parameters.get("file"));
-          if (file == null) {
+
+          if (!LoadingState.COMPONENTS_LOADED.isOccurred()) {
+            if (file == null) {
+              CommandLineCustomHandler.StartupService.initialArguments = List.of(uri);
+            } else {
+              // handle paths like /file/foo\qwe
+              Path path = Paths.get(FileUtilRt.toSystemDependentName(file)).normalize();
+              IdeStarter.Companion.openFilesOnLoading(Collections.singletonList(path));
+            }
             return;
           }
 
-          if (!LoadingState.COMPONENTS_LOADED.isOccurred()) {
-            // handle paths like /file/foo\qwe
-            IdeStarter.Companion.openFilesOnLoading(Collections.singletonList(Paths.get(FileUtilRt.toSystemDependentName(file)).normalize()));
+          if (file == null) {
+            CommandLineCustomHandler.Companion.process(List.of(uri));
             return;
           }
 
