@@ -1,4 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.openapi.vfs.encoding;
 
 import com.intellij.lang.Language;
@@ -58,10 +58,7 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.Objects;
-import java.util.Set;
+import java.util.*;
 import java.util.concurrent.TimeUnit;
 
 import static org.junit.Assert.assertArrayEquals;
@@ -198,8 +195,7 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     assertEquals(defaultProjectEncoding(), file.getCharset());
   }
 
-  @NotNull
-  private static VirtualFile find(String name) {
+  private static @NotNull VirtualFile find(String name) {
     return Objects.requireNonNull(getTestRoot().findChild(name));
   }
 
@@ -392,8 +388,7 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     assertArrayEquals(text.getBytes(US_ASCII), bytes);
   }
 
-  @NotNull
-  private static Charset defaultProjectEncoding() {
+  private static @NotNull Charset defaultProjectEncoding() {
     // just for the sake of testing something different from utf-8
     return StandardCharsets.US_ASCII;
   }
@@ -548,7 +543,7 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     assertNotNull(document);
     FileDocumentManager.getInstance().saveAllDocuments();
     FileType fileType = file.getFileType();
-    assertEquals(StdFileTypes.HTML, fileType);
+    assertEquals(FileTypeManager.getInstance().getStdFileType("HTML"), fileType);
     Charset fromType = ((LanguageFileType)fileType).extractCharsetFromFileContent(myProject, file, (CharSequence)content);
     assertEquals(StandardCharsets.UTF_8, fromType);
     String fromProlog = XmlCharsetDetector.extractXmlEncodingFromProlog(content);
@@ -702,7 +697,7 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
   }
 
   public void testMustBeSafeToReloadISO8859TextMistakenlyLoadedInUTF8() throws IOException {
-    String isoText = "No se ha encontrado ningún puesto con ese criterio de búsqueda";
+    @SuppressWarnings("SpellCheckingInspection") String isoText = "No se ha encontrado ningún puesto con ese criterio de búsqueda";
     VirtualFile file = createTempFile("txt", NO_BOM, isoText, StandardCharsets.ISO_8859_1);
     byte[] bytes = isoText.getBytes(StandardCharsets.ISO_8859_1);
     file.setCharset(StandardCharsets.UTF_8);
@@ -976,7 +971,7 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     VirtualFile src = getTestRoot().findChild("BIG_CHANGES");
     assertNotNull(src);
 
-    // create new file to avoid caching the file AUTO_DETECTED attribute. we need to re-detect from scratch to test its correctness
+    // create new file to avoid caching the file AUTO_DETECTED attribute. we need to re-detect it from scratch to test its correctness
     VirtualFile file = createTempFile("blah-blah", NO_BOM, new String(src.contentsToByteArray(), StandardCharsets.UTF_8), StandardCharsets.UTF_8);
 
     assertNull(file.getBOM());
@@ -1002,39 +997,12 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
   public void testEncodingDetectionRequestsRunInOneThreadForEachDocument() throws IOException {
     Set<Thread> detectThreads = ContainerUtil.newConcurrentSet();
     class MyFT extends LanguageFileType implements FileTypeIdentifiableByVirtualFile {
-      private MyFT() {
-        super(new Language("my") {
-        });
-      }
-
-      @Override
-      public boolean isMyFileType(@NotNull VirtualFile file) {
-        return getDefaultExtension().equals(file.getExtension());
-      }
-
-      @NotNull
-      @Override
-      public String getName() {
-        return "my";
-      }
-
-      @NotNull
-      @Override
-      public String getDescription() {
-        return getName();
-      }
-
-      @NotNull
-      @Override
-      public String getDefaultExtension() {
-        return "my";
-      }
-
-      @Nullable
-      @Override
-      public Icon getIcon() {
-        return null;
-      }
+      private MyFT() { super(new Language("my") {}); }
+      @Override public boolean isMyFileType(@NotNull VirtualFile file) { return getDefaultExtension().equals(file.getExtension()); }
+      @Override public @NotNull String getName() { return "my"; }
+      @Override public @NotNull String getDescription() { return getName(); }
+      @Override public @NotNull String getDefaultExtension() { return "my"; }
+      @Override public @Nullable Icon getIcon() { return null; }
 
       @Override
       public Charset extractCharsetFromFileContent(@Nullable Project project, @Nullable VirtualFile file, @NotNull CharSequence content) {
@@ -1045,33 +1013,27 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     }
 
     FileType foo = new MyFT();
-    FileTypeManagerImpl fileTypeManager = (FileTypeManagerImpl)FileTypeManagerEx.getInstanceEx();
-    try {
-      fileTypeManager.registerFileType(foo);
+    ((FileTypeManagerImpl)FileTypeManagerEx.getInstanceEx()).registerFileType(foo, List.of(), getTestRootDisposable());
 
-      VirtualFile file = createTempFile("my", NO_BOM, StringUtil.repeat("c", 20), US_ASCII);
-      FileEditorManager.getInstance(getProject()).openFile(file, false);
+    VirtualFile file = createTempFile("my", NO_BOM, StringUtil.repeat("c", 20), US_ASCII);
+    FileEditorManager.getInstance(getProject()).openFile(file, false);
 
-      Document document = getDocument(file);
-      assertEquals(foo, file.getFileType());
-      file.setCharset(null);
-      detectThreads.clear();
+    Document document = getDocument(file);
+    assertEquals(foo, file.getFileType());
+    file.setCharset(null);
+    detectThreads.clear();
 
-      for (int i=0; i<1000; i++) {
-        WriteCommandAction.runWriteCommandAction(getProject(), () -> document.insertString(0, " "));
-      }
-
-      EncodingManagerImpl encodingManager = (EncodingManagerImpl)EncodingManager.getInstance();
-      encodingManager.waitAllTasksExecuted(60, TimeUnit.SECONDS);
-      UIUtil.dispatchAllInvocationEvents();
-
-      Thread thread = assertOneElement(detectThreads);
-      ApplicationManager.getApplication().assertIsDispatchThread();
-      assertNotEquals(Thread.currentThread(), thread);
+    for (int i=0; i<1000; i++) {
+      WriteCommandAction.runWriteCommandAction(getProject(), () -> document.insertString(0, " "));
     }
-    finally {
-      fileTypeManager.unregisterFileType(foo);
-    }
+
+    EncodingManagerImpl encodingManager = (EncodingManagerImpl)EncodingManager.getInstance();
+    encodingManager.waitAllTasksExecuted(60, TimeUnit.SECONDS);
+    UIUtil.dispatchAllInvocationEvents();
+
+    Thread thread = assertOneElement(detectThreads);
+    ApplicationManager.getApplication().assertIsDispatchThread();
+    assertNotEquals(Thread.currentThread(), thread);
   }
 
   public void testSetMappingMustResetEncodingOfNotYetLoadedFiles() {
@@ -1143,36 +1105,12 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
   public void testForcedCharsetOverridesFileEncodingProvider() throws IOException {
     final String ext = "yyy";
     class TestFileType extends LanguageFileType {
-
-      protected TestFileType() {
-        super(new Language("test") {
-        });
-      }
-
-      @Override
-      public @NotNull String getName() {
-        return "Test";
-      }
-
-      @Override
-      public @NotNull String getDescription() {
-        return "Test";
-      }
-
-      @Override
-      public @NotNull String getDefaultExtension() {
-        return ext;
-      }
-
-      @Override
-      public @Nullable Icon getIcon() {
-        return null;
-      }
-
-      @Override
-      public String getCharset(@NotNull VirtualFile file, final byte @NotNull [] content) {
-        return StandardCharsets.ISO_8859_1.name();
-      }
+      protected TestFileType() { super(new Language("test") {}); }
+      @Override public @NotNull String getName() { return "Test"; }
+      @Override public @NotNull String getDescription() { return "Test"; }
+      @Override public @NotNull String getDefaultExtension() { return ext; }
+      @Override public @Nullable Icon getIcon() { return null; }
+      @Override public String getCharset(@NotNull VirtualFile file, byte @NotNull [] content) { return StandardCharsets.ISO_8859_1.name(); }
     }
     TestFileType fileType = new TestFileType();
     FileEncodingProvider encodingProvider = new FileEncodingProvider() {
@@ -1183,15 +1121,10 @@ public class FileEncodingTest extends HeavyPlatformTestCase implements TestDialo
     };
     FileEncodingProvider.EP_NAME.getPoint().registerExtension(encodingProvider, getTestRootDisposable());
     FileTypeManagerImpl fileTypeManager = (FileTypeManagerImpl)FileTypeManagerEx.getInstanceEx();
-    fileTypeManager.registerFileType(fileType, Collections.singletonList(new ExtensionFileNameMatcher(ext)));
+    fileTypeManager.registerFileType(fileType, List.of(new ExtensionFileNameMatcher(ext)), getTestRootDisposable());
     VirtualFile file = createTempFile(ext, NO_BOM, "some", StandardCharsets.UTF_8);
-    try {
-      assertEquals(fileType, file.getFileType());
-      assertEquals(StandardCharsets.ISO_8859_1, file.getCharset());
-    }
-    finally {
-      fileTypeManager.unregisterFileType(fileType);
-    }
+    assertEquals(fileType, file.getFileType());
+    assertEquals(StandardCharsets.ISO_8859_1, file.getCharset());
   }
 
   public void testDetectedCharsetOverridesFileEncodingProvider() throws IOException {
